Fix position of sidebar on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1284,8 +1284,6 @@ footer {
 			padding-top: 0;
 			display: block;
 			padding-right: 0;
-			background-color: white;
-			box-shadow: 0rem 2rem 2rem rgba(0, 0, 0, 0.5);
 			overflow-y: auto;
 			max-height: 100vh;
 			min-width: 70vw;
@@ -1297,12 +1295,14 @@ footer {
 			}
 
 			.menu-wrapper {
-				position: relative;
+				position: fixed;
 				width: 70vw;
 				height: 100%;
 				padding-top: 0;
 				padding-bottom: 0;
-        margin-top: 5.5rem;
+		margin-top: 5.5rem;
+				background-color: white;
+				box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.5);
 
 			}
 
